Add linkedin reference for website.

--- a/index.html
+++ b/index.html
@@ -403,7 +403,7 @@
         <div class="container">
             <span class="footer-logo">agitly<span>.</span>com</span>
             <div class="social-links">
-                <a href="#"><i class="fab fa-linkedin"></i></a>
+                <a href="https://www.linkedin.com/company/agitly"><i class="fab fa-linkedin"></i></a>
                 <a href="#"><i class="fab fa-twitter"></i></a>
                 <a href="#"><i class="fab fa-instagram"></i></a>
             </div>
